--- a/All_Project_Code/src/views/pages/login.ejs
+++ b/All_Project_Code/src/views/pages/login.ejs
@@ -1,18 +1,22 @@
 <%- include ('../partials/header') %> <%- include ('../partials/menu') %>
 
 <main>
-  <div class="container">
-        <form action="/login" method="POST">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" />
-        
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" />
-        
-            <input type="submit" value="Submit" />
-        </form>
+    <div class="container mt-5">
+      <h1 class="mb-4">Login</h1>
+      <form action="/login" method="post">
+        <div class="mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input type="text" class="form-control" id="username" name="username" required>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
         <p>If you do not have an account, <a href="/register">REGISTER HERE</a></p>
     </div>
-</main>
+  </main>
+        
 
 <%- include ('../partials/footer') %>
