--- a/All_Project_Code/src/views/partials/menu.ejs
+++ b/All_Project_Code/src/views/partials/menu.ejs
@@ -12,6 +12,9 @@
                         <!-- TO-DO: For Discover, add a <a> tag with an attribute href to call the '/discover' API -->
                         <a class="nav-link" href="/discover">DISCOVER</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/create">CREATE</a>
+                    </li>
                 </ul>
                 <div class="nav-item me-1">
                     <!-- TO-DO: For Logout, add a <a> tag with an attribute href to call the '/logout API -->
