--- a/All_Project_Code/src/views/pages/register.ejs
+++ b/All_Project_Code/src/views/pages/register.ejs
@@ -1,18 +1,21 @@
 <%- include ('../partials/header') %> <%- include ('../partials/menu') %>
 
 <main>
-  <div class="container">
-        <form action="/register" method="POST">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" />
-        
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" />
-        
-            <input type="submit" value="Submit" />
-        </form>
-        <p>If you already have an account, <a href="/login">LOGIN HERE</a></p>
+    <div class="container mt-5">
+      <h1 class="mb-4">Register</h1>
+      <form action="/register" method="POST">
+        <div class="mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input type="text" class="form-control" id="username" name="username" required>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+        <p>If you already have an account, <a href="/login">Login</a></p>
     </div>
-</main>
+  </main>
 
 <%- include ('../partials/footer') %>
