--- a/All_Project_Code/src/views/pages/register.ejs
+++ b/All_Project_Code/src/views/pages/register.ejs
@@ -11,6 +11,10 @@
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
           <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+        <p>If you already have an account, <a href="/login">Login</a></p>
     </div>
   </main>
 
