--- a/All_Project_Code/src/views/pages/login.ejs
+++ b/All_Project_Code/src/views/pages/login.ejs
@@ -1,4 +1,5 @@
-<%- include ('../partials/header') %> <%- include ('../partials/menu') %>
+<%- include ('../partials/header') %> 
+<%- include ('../partials/menu') %>
 
 <main>
     <div class="container mt-5">
@@ -14,7 +15,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
-        <p>If you do not have an account, <a href="/register">REGISTER HERE</a></p>
+        <p>If you do not have an account, <a href="/register">Register</a></p>
     </div>
   </main>
         
