--- a/All_Project_Code/src/views/pages/create.ejs
+++ b/All_Project_Code/src/views/pages/create.ejs
@@ -15,6 +15,10 @@
         <form class="formcontainer" action="/make_profile" method="POST">
             <h1>Info</h1>
             <hr>
+            <label for="first_name">First Name</label>
+            <input type="text" name="first_name" id="first_name">
+            <label for="last_name">Last Name</label>
+            <input type="text" name="last_name" id="last_name">
             <label for="bio">Bio</label>
             <input type="text" name="bio" id="bio">
             <label for="location">Location</label>
