Fixed logo issue added 2 api routes for matches page

--- a/All_Project_Code/src/views/partials/menu.ejs
+++ b/All_Project_Code/src/views/partials/menu.ejs
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav me-auto align-items-center">
                     <li>
                     <a class="navbar-brand" href="/home">
-                        <img src="https://lh3.googleusercontent.com/pw/ADCreHfdtAjvaqBHUUYSXxV2SIgeV1BqeqhQBWsk8rA3TNLfVwq_BEXioDH6TLnCbBSfm2xyOaJ-ezkSsuGqv8T08pqAQalSfh1k8Tcu3S5N6O9qcTrJ1aZWxlFSJxttkZu8HE0FqZKK2Lj0zvnr7-TmQLGj0jGADHvICa9TzxaFqMRJdLrQrc4r-f34w4vqX4gRRj_H2O-QKXLg1wyTdZLZP5UpfaQos7Qr321-id7oeFDhLbvzYSheejf_8gB7Mhe_4YL5sRW4FGEMGlL8GcA86B1aeyscL2fN30TydULlPDY--ESywwyEpuS6YwbPgX-psvuR6lVCpNUTLWwDheyK7W-qWLwVXIZpjOYuk8tq8vhoU-j0m0NWaXbnbPPQUYgGUclun8ngioOC_onABVsWJWxmH56jA8gtpJi9FGyp8ia9v2XuSE_Rn0oPoAV89GYkizVte5lbhEUxRq0Wn7cw5u_qm_Hg4a9nqdSP4gQUH0ESHnmq3PTZOX5qhCZGZw1hlmpql-LdukvD6fyw5SQtNOkDqsZapyz29-JMVJ75YbtPmNoLU8cPIx8nqStIjTqkXkkYNCAcD6x1DmxHp3aNFCraVgObSngQ9gnkq7uc8Czubs4Pfk7N608BSvrw3gWIaeVj-0a1TtH5iaoCdnaVigyjRiwluNhLFvLBVmewVOWOh-Q-jEJSvuC_DgJ2gYevl5gU_ycjL72Hd8waiscmYV_-JbjK0rAmZE320MsxlxjSVJ4O9B0zq23pdVbaxE3gh797ARbEcCpAW8E1TCUnuwj-0epUdT6t8xLoECRY419gMGaI5ZqMyqJcgzyMabIs9mQ4gqnrw-skxhRwjF_awU7N6UALgpfe-stQR2RzCVhvEMaMbyI_YatV6kiAIOt-UqB5xw3ma4tGOvwQ5HNv8bPZqk8b93cXPeDrnuGuWBiLchnANqVvKqrnKSEtaNFFBoT9F11JEa2rrR2Edl7tMd4DOOEIANDubGBAOsh7m6KWQx5f-T-eDYEG0jcaRNTdyvBuN8vx96WG1G0yFxbmUA4TgJO6vBogThRCUeMvNHIZdxHU1wapbPMifZYsO-n5iUyLMjwGMyXRqq6iq7nUdCg=w1000-h500-s-no-gm?authuser=0" alt="Rinder" style="max-height: 70px;">
+                        <img src="../../resources/public/rinder logo.png" alt="rinder" style="max-height: 70px;">
                     </a>
                     </li>
                     <li class="nav-item">
