--- a/All_Project_Code/src/views/pages/discover.ejs
+++ b/All_Project_Code/src/views/pages/discover.ejs
@@ -1,27 +1,7 @@
 <%- include ('../partials/header') %> <%- include ('../partials/menu') %> 
 <div class="col"><%- include ('../partials/message') %></div>
 <main>
-  <div class="container">
-    <table class="table">
-        <tr>
-            <th>EVENTS</th>
-        </tr>
-        <% results.forEach(result => { %>
-            <tr>
-                <td><%= result.name %></td>
-                <td><img src=<%= result.images[0].url %> style="height:50px;"></img></td>
-                <td>
-                    <a style="text-decoration: none; color: black;" href=<%= result.url %>>
-                        <button class="btn btn-primary" style="padding:5px; margin: 0;">
-                            Book Now
-                        </button>
-                    </a>
-                </td>
-            </tr>
-        <% }); %>
-    </table>
-</table>
-<style>
+  <style>
     body {font-family: Arial, Helvetica, sans-serif;}
     
     /* The Modal (background) */
@@ -83,65 +63,70 @@
     }
     
     </style>
-    <body>
-    <!-- Trigger/Open The Modal -->
-    <button id="myBtn">Open Modal</button>
-    
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-    
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <div class="modal-content-div">
-            <div class="name-img">
-                <img class="pfpimg" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="">
-            </div>
-            <div class="info">
-                <h1>First Name Last Name</h1>
-
-                <hr>
-                <p>This is a description of said person</p>
-                <ul>
-                    <li>Age-Range:</li>
-                    <li>Location:</li>
-                    <li>Sex:</li>
-                    <li>Pets:</li>
-                </ul>
-            </div>
-        </div>
-      </div>
-    
-    </div>
-    
-    <script>
-    // Get the modal
-    var modal = document.getElementById("myModal");
-    
-    // Get the button that opens the modal
-    var btn = document.getElementById("myBtn");
-    
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-    
-    // When the user clicks the button, open the modal 
-    btn.onclick = function() {
-      modal.style.display = "block";
-    }
-    
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() {
-      modal.style.display = "none";
-    }
-    
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-    </script>
-  </div>
+  <div class="container">
+    <table class="table">
+        <tr>
+            <th>PEOPLE</th>
+        </tr>
+        <% results.forEach(result => { %>
+          <tr>
+              <td><%= result.first_name %></td>
+              <body>
+                  <!-- Trigger/Open The Modal -->
+                  <button class="openModalBtn" data-user-id="<%= result.user_id %>">Open Modal</button>
+      
+                  <!-- The Modal -->
+                  <div id="myModal_<%= result.user_id %>" class="modal">
+                      <!-- Modal content -->
+                      <div class="modal-content">
+                          <span class="close" data-user-id="<%= result.user_id %>">&times;</span>
+                          <div class="modal-content-div">
+                              <div class="name-img">
+                                  <img class="pfpimg" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="">
+                              </div>
+                              <div class="info">
+                                  <h1><%= result.first_name %> <%= result.last_name %></h1>
+                                  <hr>
+                                  <p><%= result.bio %></p>
+                                  <ul>
+                                      <li>Age-Range:</li>
+                                      <li>Location:</li>
+                                      <li>Sex:</li>
+                                      <li>Pets:</li>
+                                  </ul>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </body>
+          </tr>
+      <% }) %>
+      
+      <script>
+          document.addEventListener('DOMContentLoaded', function () {
+              const openModalButtons = document.querySelectorAll('.openModalBtn');
+              const closeButtons = document.querySelectorAll('.close');
+      
+              openModalButtons.forEach(button => {
+                  button.addEventListener('click', function () {
+                      const userId = this.getAttribute('data-user-id');
+                      const modal = document.getElementById(`myModal_${userId}`);
+                      modal.style.display = 'block';
+                  });
+              });
+      
+              closeButtons.forEach(button => {
+                  button.addEventListener('click', function () {
+                      const userId = this.getAttribute('data-user-id');
+                      const modal = document.getElementById(`myModal_${userId}`);
+                      modal.style.display = 'none';
+                  });
+              });
+          });
+      </script>
+      
+    </table>
+</table>
   
 </main>
 <%- include ('../partials/footer') %>
