Fixed register page

--- a/All_Project_Code/src/views/pages/register.ejs
+++ b/All_Project_Code/src/views/pages/register.ejs
@@ -24,7 +24,8 @@
             <label for="age" class="form-label">Age</label>
             <input type="text" name="age" id="age" class="form-control" required>
         </div>
-      <input type="submit" value="Register Now" />
+        <button type="submit" class="btn btn-primary">Register</button>
+        <p>If you do not have an account, <a href="/login">Login</a></p>
   </main>
 
 <%- include ('../partials/footer') %>
