--- a/All_Project_Code/src/views/pages/matches.ejs
+++ b/All_Project_Code/src/views/pages/matches.ejs
@@ -1,9 +1,18 @@
 <%- include ('../partials/header') %> <%- include ('../partials/menu') %>
 
 <main>
-<h4> People who liked your post:</h4>
+<h4> Your matches:</h4>
 <hr>
 <form class = "formcontainer" action = "/liked_you" method="GET">
+
+
+</form>
+<br>
+<br>
+<h4> People who liked your profile:</h4>
+<hr>
+<form class = "formcontainer" action = "liked_back" method="GET">
+
 
 
 </form>
