fixed mistake of register going to login and vice versa

--- a/All_Project_Code/src/views/pages/home.ejs
+++ b/All_Project_Code/src/views/pages/home.ejs
@@ -55,8 +55,8 @@
     <div class="container">
         <h1>Welcome to Rinder</h1>
         <p>Find your perfect roommate and make your living experience amazing!</p>
-        <a href="/register" class="cta-button">Login</a>
-       <a href="/login" class="cta-button">Register</a> 
+        <a href="/login" class="cta-button">Login</a>
+       <a href="/register" class="cta-button">Register</a> 
     </div>
 </body>
 </html>
