changed home background color

--- a/All_Project_Code/src/views/pages/home.ejs
+++ b/All_Project_Code/src/views/pages/home.ejs
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f7f7f7;
+            background-color: #FF6B6B;
             margin: 0;
             padding: 0;
             display: flex;
@@ -27,7 +27,7 @@
         }
 
         h1 {
-            color: #ff3b3f;
+            color: #FF6B6B;
         }
 
         p {
@@ -38,7 +38,7 @@
             display: inline-block;
             padding: 10px 20px;
             margin-top: 20px;
-            background-color: #ff3b3f;
+            background-color: #FF6B6B;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
