--- a/All_Project_Code/src/views/partials/menu.ejs
+++ b/All_Project_Code/src/views/partials/menu.ejs
@@ -31,6 +31,10 @@
                         <a class="nav-link" href="/discover">DISCOVER</a>
                     </li>
                     <li class="nav-item">
+                        <!-- TO-DO: For Discover, add a <a> tag with an attribute href to call the '/discover' API -->
+                        <a class="nav-link" href="/users">USERS</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/preferences">PREFERENCES</a>
                     </li>
                     <li class="nav-item">
