made liked users show up based on person

--- a/All_Project_Code/src/views/pages/create.ejs
+++ b/All_Project_Code/src/views/pages/create.ejs
@@ -24,11 +24,7 @@
                 <option value="nopref">No Preference</option>
             </select>
             <label for="pets">Pets</label>
-            <select name="pets" id="pets">
-                <option value="dogs">Dogs</option>
-                <option value="cats">Cats</option>
-                <option value="none">No Pets</option>
-            </select>
+            <input type="text" name="pets" id="pets">
             <label for="budget">Budget/Price Range</label>
             <input type="text" name="budget" id="budget">
             <input type="submit" value="Save Changes" />
