changed ui of login/reg/pref and added new preferences post route that doesn't work yet

--- a/All_Project_Code/src/views/pages/home.ejs
+++ b/All_Project_Code/src/views/pages/home.ejs
@@ -27,7 +27,7 @@
         }
 
         h1 {
-            color: #FF6B6B;
+            color: #ff3b3f;
         }
 
         p {
@@ -38,17 +38,14 @@
             display: inline-block;
             padding: 10px 20px;
             margin-top: 20px;
-            background-color: #FF6B6B;
+            background-color: #ff3b3f;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
             transition: background-color 0.3s ease;
         }
-
-        .cta-button:hover {
-            background-color: #cc3135;
-        }
+        
     </style>
 </head>
 <body>
