--- a/All_Project_Code/src/views/partials/menu.ejs
+++ b/All_Project_Code/src/views/partials/menu.ejs
@@ -5,7 +5,7 @@
     }
 
     .navbar a {
-        color: #FF6B6B; /* Set the text color to Tinder color */
+        color: #ff3b3f; /* Set the text color to Tinder color */
         font-weight: bold;
         max-height: 70px;
     }
@@ -13,7 +13,7 @@
 
 <header>
     <nav class="navbar navbar-expand-sm border-bottom">
-        <div class="container">
+        <div class="container" id = "menuContainer">
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbar-collapse" aria-controls="navbar" aria-expanded="false"
                 aria-label="Toggle navigation">
