--- a/All_Project_Code/src/views/pages/discover.ejs
+++ b/All_Project_Code/src/views/pages/discover.ejs
@@ -70,8 +70,25 @@
         <tr>
             <th>PEOPLE</th>
         </tr>
-        <% results.forEach(result => { %>
-          <tr>
+        <% 
+        // Sort the results array by age, with priority given to matching age
+        const sortedResults = results.sort((a, b) => {
+          const ageDifferenceA = Math.abs(a.dob.age - preferences.age_range);
+          const ageDifferenceB = Math.abs(b.dob.age - preferences.age_range);
+
+          if (ageDifferenceA === ageDifferenceB) {
+            // If age difference is the same, prioritize younger users
+            return a.dob.age - b.dob.age;
+          }
+
+          // Sort by proximity to preferences.age_range
+          return ageDifferenceA - ageDifferenceB;
+        });
+        
+        sortedResults.forEach(result => { 
+      %>
+      <% if (result.dob.age === preferences.age_range || (preferences.age_range >= 18 && preferences.age_range <= 21 && result.dob.age > preferences.age_range && result.dob.age <= preferences.age_range + 5) || (preferences.age_range > 21 && result.dob.age > preferences.age_range - 3 && result.dob.age <= preferences.age_range + 3)) { %>
+        <tr>
               <td><%= result.name.first %></td>
               <td>
                 <button class="openModalBtn" data-user-id="<%= result.user_id %>" onclick="openModal('<%= result.name.first %>', '<%= result.name.last %>', '<%= result.dob.age %>', '<%= result.location.city %>', '<%= result.location.country %>', '<%= result.gender %>', '<%= result.picture.large %>', '<%= result.email %>')">Open Modal</button>
@@ -97,6 +114,10 @@
                                         <p>First Name: </p>
                                         <p id ="first"><%= result.name.first %> </p>
                                     </div>
+                                    <div class="d-flex flex-row">
+                                      <p>preferenced age: </p>
+                                      <p id ="first"><%= preferences.age_range %> </p>
+                                  </div>
                                     <div class="d-flex flex-row">
                                         <p>Last Name: </p>
                                         <p id ="last"> <%= result.name.last %> </p>
@@ -131,7 +152,8 @@
                       </div>
                   </div>
           </tr>
-      <% }) %>
+          <% } %>
+          <% }) %>
     </body>
       
       <script>
