--- a/All_Project_Code/src/views/pages/users.ejs
+++ b/All_Project_Code/src/views/pages/users.ejs
@@ -93,7 +93,7 @@
                                     <li>Location: <%= result.location ? result.location : 'Not specified' %></li>
                                     <li>Sex: <%= result.sex ? result.sex : 'Not specified' %></li>
                                     <li>Pets: <%= result.pets ? result.pets : 'Not specified' %></li>
-                                    <li>Pets: <%= result.budget ? result.budget : 'Not specified' %></li>
+                                    <li>Budget: <%= result.budget ? result.budget : 'Not specified' %></li>
                                 </ul>
                               </div>
                           </div>
