--- a/All_Project_Code/src/views/pages/register.ejs
+++ b/All_Project_Code/src/views/pages/register.ejs
@@ -63,7 +63,7 @@
             </div>
             <button type="submit">Register</button>
         </form>
-        <p style = "font-weight: bold;">If you do not have an account, <a href="/login">Login</a></p>
+        <p style = "font-weight: bold;">If you already have an account, <a href="/login">Login</a></p>
     </div>
 </main>
 
