--- a/All_Project_Code/src/views/pages/login.ejs
+++ b/All_Project_Code/src/views/pages/login.ejs
@@ -56,7 +56,7 @@
             </div>
             <button type="submit">Login</button>
         </form>
-        <p style = "font-weight: bold;">If you already have an account, <a href="/register">Register</a></p>
+        <p style = "font-weight: bold;">If you do not have an account, <a href="/register">Register</a></p>
     </div>
 </main>
 
