--- a/All_Project_Code/src/views/pages/discover.ejs
+++ b/All_Project_Code/src/views/pages/discover.ejs
@@ -1,4 +1,4 @@
-<%- include ('../partials/header') %> <%- include ('../partials/menu') %> 
+<%- include ('../partials/background2') %> <%- include ('../partials/header') %> <%- include ('../partials/menu') %> 
 <div class="col"><%- include ('../partials/message') %></div>
 <main>
   <style>
@@ -65,7 +65,7 @@
     </style>
               <body>
 
-  <div class="container">
+  <div style="position: sticky" class="container">
     <table class="table">
         <tr>
             <th>PEOPLE</th>
