--- a/All_Project_Code/src/views/pages/matches.ejs
+++ b/All_Project_Code/src/views/pages/matches.ejs
@@ -1,6 +1,6 @@
-<%- include ('../partials/header') %> <%- include ('../partials/menu') %>
+<%- include ('../partials/background2') %> <%- include ('../partials/header') %> <%- include ('../partials/menu') %>
 
-<div class="m-5">
+<div style="position: relative;" class="m-5">
     <main>
         <h4> Your matches:</h4>
         <hr>
