--- a/All_Project_Code/src/views/pages/users.ejs
+++ b/All_Project_Code/src/views/pages/users.ejs
@@ -1,4 +1,4 @@
-<%- include ('../partials/header') %> <%- include ('../partials/menu') %> 
+<%- include ('../partials/background2') %> <%- include ('../partials/header') %> <%- include ('../partials/menu') %> 
 <div class="col"><%- include ('../partials/message') %></div>
 <main>
   <style>
@@ -64,7 +64,7 @@
     
     </style>
   <div class="container">
-    <table class="table">
+    <table style="position: relative;" class="table">
         <tr>
             <th>PEOPLE</th>
         </tr>
