--- a/All_Project_Code/src/views/partials/menu.ejs
+++ b/All_Project_Code/src/views/partials/menu.ejs
@@ -12,7 +12,7 @@
 </style>
 
 <header>
-    <nav class="navbar navbar-expand-sm border-bottom">
+    <nav style="background-color: rgb(255, 255, 255);" class="navbar navbar-expand-sm border-bottom">
         <div class="container" id = "menuContainer">
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbar-collapse" aria-controls="navbar" aria-expanded="false"
