--- a/All_Project_Code/src/views/pages/create.ejs
+++ b/All_Project_Code/src/views/pages/create.ejs
@@ -1,5 +1,5 @@
 <!-- preferences.ejs -->
-
+<%- include ('../partials/background2') %>
 <%- include ('../partials/header') %> 
 <%- include ('../partials/menu') %>
 
@@ -42,7 +42,7 @@
         }
     </style>
 
-    <form class="formcontainer" action="/update_preferences" method="POST">
+    <form style="position: relative;" class="formcontainer" action="/update_preferences" method="POST">
         
         <h1>Preferences</h1>
         <label for="age-range">Age Range</label>
